--- a/her.ipynb
+++ b/her.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "router = Router.from_env()\n",
     "\n",
     "class ClickArea(BaseModel):\n",
-    "    is_clickable: bool = Field(description=\"Whether the area is clickable\")\n",
+    "    purpose: str = Field(description=\"Purpose of the the element the cursor is over e.g. to login the user\")\n",
     "    description: str = Field(description=\"Description of what the mouse cursor is over\")\n",
     "    location: str = Field(description=\"General location of the mouse cursor relative to the full screen, e.g. top left, bottom right\")\n"
    ]
@@ -347,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = targets.targets[12]\n",
+    "target = targets.targets[0]\n",
     "target"
    ]
   },
@@ -396,6 +396,9 @@
     "shutil.rmtree(\"./.run\")\n",
     "os.makedirs(\"./.run\")\n",
     "\n",
+    "completed_targets: List[Target] = []\n",
+    "\n",
+    "\n",
     "for step in range(max_steps):\n",
     "    print(\"\\n---- checking if task is finished...\")\n",
     "    cursor_type = det_cursor_type(desktop)\n",
@@ -404,9 +407,14 @@
     "    if cursor_type.type != \"default\":\n",
     "        if is_finished(desktop, target):\n",
     "            print(\"task is done\")\n",
+    "            completed_targets.append(target)\n",
     "            break\n",
     "\n",
     "        print(\"task is not finished but cursor is not default\")\n",
+    "        area = describe_location(desktop)\n",
+    "        target = Target(description=area.description, location=area.location, purpose=area.purpose)\n",
+    "        completed_targets.append(target)\n",
+    "        print(\"area: \", area.model_dump())\n",
     "\n",
     "        \n",
     "    print(\"\\n---- step: \", step)\n",
