--- a/her.ipynb
+++ b/her.ipynb
@@ -300,6 +300,7 @@
     "\n",
     "def is_finished(desktop: Desktop, target: Target) -> bool:\n",
     "    \"\"\"Check if the target has been reached\"\"\"\n",
+    "    \n",
     "    thread = RoleThread()\n",
     "    b64_img = desktop.take_screenshot()\n",
     "    img = b64_to_image(b64_img)\n",
@@ -414,7 +415,7 @@
     "        area = describe_location(desktop)\n",
     "        target = Target(description=area.description, location=area.location, purpose=area.purpose)\n",
     "        completed_targets.append(target)\n",
-    "        print(\"area: \", area.model_dump())\n",
+    "        print(\"created target: \", target.model_dump())\n",
     "\n",
     "        \n",
     "    print(\"\\n---- step: \", step)\n",
@@ -427,11 +428,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Future Work\n",
+    "\n",
+    "* Indexing on the pointer is useful to find targets, but not as useful for selecting them. The pointer is fairly reliable for web pages but the browser navigation buttons and tabs do not change the cursor image. There are other paths to validate the cursor location such as predicting the outcome of clicking the button, then doing that and having the LLM judge if the button has been clicked"
+   ]
   }
  ],
  "metadata": {
