--- a/her.ipynb
+++ b/her.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hindsight Experience Replay\n",
     "\n",
-    "This notebook explores an old RL algorithm called Hindsight Experience Replay (HER) for solving the click problem of click agents. The core intuition behind HER centers on agents learning from every action. The result of each movement, even if unsuccessful, can be retroactively seen as the goal.\n",
+    "This notebook explores an old RL algorithm called Hindsight Experience Replay (HER) for solving the click problem of click agents. The core intuition behind HER centers on agents learning from every action. The result of each movement, even if unsuccessful, can be retroactively seen as the goal. We borrow from ideas of self-supervision to bring HER into generative agents.\n",
     "\n",
     "Algorithm:\n",
     "* The agent generates a set of targets to click based on the current screenshot.\n",
@@ -433,7 +433,24 @@
    "source": [
     "# Future Work\n",
     "\n",
-    "* Indexing on the pointer is useful to find targets, but not as useful for selecting them. The pointer is fairly reliable for web pages but the browser navigation buttons and tabs do not change the cursor image. There are other paths to validate the cursor location such as predicting the outcome of clicking the button, then doing that and having the LLM judge if the button has been clicked"
+    "* Indexing on the pointer is useful to find targets, but not as useful for selecting them. The pointer is fairly reliable for web pages but the browser navigation buttons and tabs do not change the cursor image. There are other paths to validate the cursor location such as predicting the outcome of clicking the button, then doing that and having the LLM judge if the button has been clicked\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
    ]
   }
  ],
