--- a/her.ipynb
+++ b/her.ipynb
@@ -433,7 +433,7 @@
    "source": [
     "# Future Work\n",
     "\n",
-    "* Indexing on the pointer is useful to find targets, but not as useful for selecting them. The pointer is fairly reliable for web pages but the browser navigation buttons and tabs do not change the cursor image. There are other paths to validate the cursor location such as predicting the outcome of clicking the button, then doing that and having the LLM judge if the button has been clicked\n",
+    "* Indexing on the pointer is useful to find targets, but not as useful for selecting them. The pointer is fairly reliable for web pages but the browser navigation buttons and tabs do not change the cursor image. There are other paths to validate the cursor location such as predicting the outcome of clicking the button, taking the action and then having the LLM judge if the button has been clicked\n",
     "\n",
     "\n",
     "\n",
@@ -452,6 +452,11 @@
    "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
