--- a/her.ipynb
+++ b/her.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hindsight Experience Replay\n",
     "\n",
-    "This notebook explores an old RL algorithm called Hindsight Experience Replay (HER) for solving the click problem of click agents. The core intuition behind HER centers on agents learning from every action. The result of each movement, even if unsuccessful, can be retroactively seen as the goal. We borrow from ideas of self-supervision to bring HER into generative agents.\n",
+    "This notebook explores an old RL algorithm called Hindsight Experience Replay (HER) for solving the problem of clicking on GUI elements. The core intuition behind HER centers on agents learning from every action. The result of each movement, even if unsuccessful, can be retroactively seen as the goal. We borrow from ideas of self-supervision to bring HER into generative agents.\n",
     "\n",
     "Algorithm:\n",
     "* The agent generates a set of targets to click based on the current screenshot.\n",
